Tests and bugfixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "ipykernel>=6.29.5",
+    "matplotlib>=3.10.0",
     "scikit-learn>=1.6.0",
 ]
