--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.10"
 dependencies = [
     "numpy>=2.0",
     "scipy>=1.14.1",
+    "torch>=2.5.1",
 ]
 
 [project.scripts]
@@ -21,6 +22,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "datasets>=3.2.0",
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.0",
     "scikit-learn>=1.6.0",
